--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "fzaninotto/faker": "^1.4",
     "mockery/mockery": "^1.0",
     "nunomaduro/collision": "^2.0",
-    "phpunit/phpunit": "^7.0"
+    "phpunit/phpunit": "^7.0",
+    "orchestra/testbench": "~3.6"
   },
   "autoload": {
     "psr-4": {
@@ -39,7 +40,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/"
+      "Railroad\\Usora\\Tests\\": "tests/"
     }
   }
 }
