Fixing package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "railroad/ysira",
+  "name": "railroad/usora",
   "type": "library",
   "description": "User management system.",
   "keywords": [
