--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "laravel/tinker": "^1.0",
     "guzzlehttp/guzzle": "~6.0",
     "doctrine/dbal": "^2.5",
-    "railroad/resora": "0.0.01"
+    "railroad/resora": "0.0.01",
+    "railroad/permissions": "5.60.01"
   },
   "require-dev": {
     "filp/whoops": "^2.0",
