--- a/composer.json
+++ b/composer.json
@@ -18,24 +18,19 @@
   ],
   "prefer-stable": true,
   "require": {
-    "php": "^7.1.3",
-    "fideloper/proxy": "^4.0",
-    "laravel/framework": "5.6.*",
-    "laravel/tinker": "^1.0",
-    "guzzlehttp/guzzle": "~6.0",
-    "doctrine/dbal": "^2.5",
-    "railroad/resora": "1.0.*",
-    "railroad/permissions": "1.0.*",
+    "php": "^7.1",
+    "laravel/framework": "^5.6",
     "mikemclin/laravel-wp-password": "~2.0.1",
-    "doctrine/orm": "^2.6"
+    "ext-redis": "*",
+    "doctrine/orm": "^2.6",
+    "doctrine/data-fixtures": "^1.3",
+    "laravel-doctrine/extensions": "1.0.*",
+    "gedmo/doctrine-extensions": "^2.4"
   },
   "require-dev": {
-    "filp/whoops": "^2.0",
-    "fzaninotto/faker": "^1.4",
-    "mockery/mockery": "^1.0",
-    "nunomaduro/collision": "^2.0",
     "phpunit/phpunit": "^7.0",
-    "orchestra/testbench": "~3.6"
+    "orchestra/testbench": "~3.6",
+    "fzaninotto/faker": "^1.4"
   },
   "autoload": {
     "psr-4": {
