--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "laravel-doctrine/extensions": "1.0.*",
-    "gedmo/doctrine-extensions": "^2.4"
+    "gedmo/doctrine-extensions": "^2.4",
+    "railroad/permissions": "1.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
