--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "doctrine/orm": "^2.6",
     "doctrine/data-fixtures": "^1.3",
     "gedmo/doctrine-extensions": "^2.4",
+    "jms/serializer": "1.*",
     "railroad/permissions": "1.0.*"
   },
   "require-dev": {
