Integrare JSON Web Token Authentication

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "doctrine/dbal": "^2.5",
     "railroad/resora": "1.0.*",
     "railroad/permissions": "1.0.*",
-    "mikemclin/laravel-wp-password": "~2.0.1"
+    "mikemclin/laravel-wp-password": "~2.0.1",
+    "tymon/jwt-auth": "1.0.0-rc.2"
   },
   "require-dev": {
     "filp/whoops": "^2.0",
