--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "doctrine/data-fixtures": "^1.3",
     "gedmo/doctrine-extensions": "^2.4",
     "jms/serializer": "1.*",
-    "railroad/permissions": "1.0.*"
+    "railroad/permissions": "1.0.*",
+    "tymon/jwt-auth": "1.0.0-rc.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
