--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "jms/serializer": "1.*",
     "railroad/permissions": "1.0.*",
     "tymon/jwt-auth": "1.0.0-rc.2",
-    "spatie/laravel-fractal": "5.3.2"
+    "spatie/laravel-fractal": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
