--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "jms/serializer": "1.*",
     "railroad/permissions": "1.0.*",
     "tymon/jwt-auth": "1.0.0-rc.2",
-    "spatie/laravel-fractal": "^5.4"
+    "spatie/laravel-fractal": "^5.4",
+    "railroad/doctrine-array-hydrator": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
@@ -34,6 +35,7 @@
     "fzaninotto/faker": "^1.4"
   },
   "autoload": {
+
     "psr-4": {
       "Railroad\\Usora\\": "src"
     }
