--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "railroad/permissions": "1.0.*",
     "tymon/jwt-auth": "1.0.0-rc.2",
     "spatie/laravel-fractal": "^5.4",
-    "railroad/doctrine-array-hydrator": "^1.0",
+    "railroad/doctrine-array-hydrator": "1.0.*",
     "league/flysystem": "^1.0.40",
     "league/flysystem-aws-s3-v3": "~1.0"
   },
