--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
     }
   ],
   "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/railroadmedia/laravel-apidoc-generator"
+    }
+  ],
   "require": {
     "php": "^7.1",
     "laravel/framework": "^5.6",
@@ -34,7 +40,8 @@
   "require-dev": {
     "phpunit/phpunit": "^7.0",
     "orchestra/testbench": "~3.6",
-    "fzaninotto/faker": "^1.4"
+    "fzaninotto/faker": "^1.4",
+    "mpociot/laravel-apidoc-generator": "dev-master"
   },
   "autoload": {
     "psr-4": {
