Updating doctrine dependency.

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "laravel/framework": "^5.6",
     "mikemclin/laravel-wp-password": "~2.0.1",
     "ext-redis": "*",
-    "railroad/doctrine": "^0.0",
+    "railroad/doctrine": "1.0.*",
     "jms/serializer": "1.*",
     "railroad/permissions": "1.0.*",
     "tymon/jwt-auth": "1.0.*",
