--- a/composer.json
+++ b/composer.json
@@ -24,24 +24,24 @@
     }
   ],
   "require": {
-    "php": "^7.1",
-    "laravel/framework": "^5.6",
+    "php": "^8.1",
+    "laravel/framework": "^9.0",
     "mikemclin/laravel-wp-password": "~2.0.1",
     "ext-redis": "*",
-    "railroad/doctrine": "1.0.*",
+    "railroad/doctrine": "2.0.*",
     "jms/serializer": "1.*",
-    "railroad/permissions": "1.0.*",
-    "tymon/jwt-auth": "1.0.*",
-    "spatie/laravel-fractal": "^5.4",
-    "railroad/doctrine-array-hydrator": "1.0.*",
-    "league/flysystem": "^1.0.40",
-    "league/flysystem-aws-s3-v3": "~1.0"
+    "railroad/permissions": "2.0.*",
+    "php-open-source-saver/jwt-auth": "1.4.*",
+    "spatie/laravel-fractal": "^6.0",
+    "railroad/doctrine-array-hydrator": "2.0.*",
+    "league/flysystem": "^3.0",
+    "league/flysystem-aws-s3-v3": "^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
-    "orchestra/testbench": "~3.6",
-    "fzaninotto/faker": "^1.4",
-    "mpociot/laravel-apidoc-generator": "^3.1"
+    "phpunit/phpunit": "^9.5.10",
+    "phpunit/php-code-coverage": "^9.2.10",
+    "orchestra/testbench": "^7.4",
+    "dms/phpunit-arraysubset-asserts": "^0.4.0"
   },
   "autoload": {
     "psr-4": {
@@ -51,6 +51,12 @@
   "autoload-dev": {
     "psr-4": {
       "Railroad\\Usora\\Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "kylekatarnls/update-helper": true,
+      "composer/package-versions-deprecated": true
     }
   }
 }
